test/domains/compilerErrors/notsupportedCreateBuffer-ok.chpl
use notsupportedCommon;

//dfltRectangularBase.createIndexBuffer(5);
//dfltAssociativeBase.createIndexBuffer(5);
//DistributedBase.createIndexBuffer(5);
//dfltRectangularSubdomain.createIndexBuffer(5);
//dfltAssociativeSubdomain.createIndexBuffer(5);
//DistributedSubdomain.createIndexBuffer(5);
dfltRectangularSparseSub.createIndexBuffer(5);
//dfltAssociativeSparseSub.createIndexBuffer(5);
DistributedSparseSub.createIndexBuffer(5);
